hard-gists/f3fc4537fac67a0f2df2/run.log
=== Docker Run Log for f3fc4537fac67a0f2df2 ===
Started at: Mi 29. Okt 21:26:07 CET 2025

[2025-10-29 21:26:08] START: Running container for f3fc4537fac67a0f2df2
[2025-10-29 21:26:08] SUCCESS: Container 1df080d69527d4a23e341f25fc14be6d3c0118e25271087d484e2dc5edb95742 started for f3fc4537fac67a0f2df2
=== Container logs for f3fc4537fac67a0f2df2 ===
  File "/snippet.py", line 25
    print "Entering binmode: ",
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for f3fc4537fac67a0f2df2 ===
[2025-10-29 21:26:10] INFO: Container 1df080d69527d4a23e341f25fc14be6d3c0118e25271087d484e2dc5edb95742 has stopped
